--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,6 +7,7 @@
     - Kubernetes
     - Akraino
     - MindSpore
+    - TinyMS
     - More
 
 -
@@ -14,4 +15,6 @@
   keywords:
     - Jenkins
     - Docker
+    - Grafana
+    - Prometheus
     - More
